--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.6.96/css/materialdesignicons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet">
   <title>Admin dashboard</title>
 </head>
 
@@ -39,37 +41,79 @@
 
     <div class="right-container">
       <div class="header">
-        <label for="searchbar"></label>
-        <input type="text" name="searchbar" id="searchbar">
+        <div class="top-row">
+          <label for="searchbar"><span class="material-symbols-outlined">search</span>
+          </label>
+          <input type="text" name="searchbar" id="searchbar">
+          <span class="material-icons-outlined md-18">
+            notifications_active
+            </span>
+          <img id="small" src="/admin-dashboard/bob-cropped.jpg" alt="don vito corleone funko">
+          <div class="name small">Morgan Oakley</div>
+        </div>
+        <div class="bot-row">
+          <img id="med" src="/admin-dashboard/bob-cropped.jpg" alt="don vito corleone funko">
+          <div class="intro-words">
+            <p class="hi-there">Hi there,</p>
+            <p class="name-large">Morgan Oakley (@morgan)</p>
+          </div>
 
-        <button>New</button>
-        <button>Upload</button>
-        <button>Share</button>
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
       </div>
 
       <div class="content-container">
         <div class="first-row">
-          <h2>Your Projects</h2>
-          <h2>Announcements</h2>
+          <h1>Your Projects</h1>
+          <h1>Announcements</h1>
         </div>
 
         <div class="project-container">
-          <div class="card">item1</div>
-          <div class="card">item2</div>
-          <div class="card">item3</div>
-          <div class="card">item4</div>
-          <div class="card">item5</div>
-          <div class="card">item6</div>
+          <div class="card">
+            <h2>Cool Project</h2>
+            <p class="card-words">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius, dolor ac facilisis pretium, metus massa ornare libero, vel rutrum dolor quam vitae tellus.</p>
+          </div>
+          <div class="card">
+            <h2>Hot Project</h2>
+            <p class="card-words">Aliquam non justo tincidunt, maximus ante non, efficitur dolor. Vivamus sollicitudin metus in arcu efficitur, in rutrum magna rhoncus.</p>
+          </div>
+          <div class="card">
+            <h2>Spicy Project</h2>
+            <p class="card-words">In consequat lacinia mi, vel rutrum neque aliquet vel. In porta lacinia rutrum. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          </div>
+          <div class="card">
+            <h2>Sweet Project</h2>
+            <p class="card-words">Aliquam commodo ex ac felis faucibus tempor. Mauris urna tellus, eleifend quis augue eu, gravida eleifend lacus. Donec egestas ornare aliquam.</p>
+          </div>
+          <div class="card">
+            <h2>Scary Project</h2>
+            <p class="card-words">Morbi sem metus, eleifend eget dui a, ornare blandit justo. Vestibulum at ipsum velit. Nulla facilisi. </p>
+          </div>
+          <div class="card">
+            <h2>Happy Project</h2>
+            <p class="card-words">Nulla tincidunt venenatis arcu sagittis bibendum. Quisque gravida sit amet erat sed pretium. Quisque a neque eu dolor venenatis vehicula. Aliquam erat volutpat.</p>
+          </div>
         </div>
 
         <div class="right-snip">
           <div class="announce-container">
-            <div class="card-squished">item1</div>
-            <div class="card-squished">item2</div>
-            <div class="card-squished">item3</div>
+            <div class="card-squished">
+              <h2>Site Maintenance</h2>
+              <p class="card-words">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+            </div>
+            <div class="card-squished">
+              <h2>Community Share Day</h2>
+              <p class="card-words">Vestibulum varius orci ac accumsan hendrerit. Curabitur accumsan porta placerat.</p>
+            </div>
+            <div class="card-squished">
+              <h2>Updated Privacy Policy</h2>
+              <p class="card-words">Fusce malesuada, massa sollicitudin mattis tincidunt, tellus urna lacinia urna, quis sodales ligula tellus non nisi.</p>
+            </div>
           </div>
 
-          <h2>Trending</h2>
+          <h1>Trending</h1>
           
           <div class="trending-container">
             <div class="card-squished">item1</div>
