profile pics added

--- a/index.html
+++ b/index.html
@@ -67,59 +67,113 @@
       <div class="content-container">
         <div class="first-row">
           <h1>Your Projects</h1>
-          <h1>Announcements</h1>
+          <h1 id="second">Announcements</h1>
         </div>
 
         <div class="project-container">
           <div class="card">
             <h2>Cool Project</h2>
-            <p class="card-words">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius, dolor ac facilisis pretium, metus massa ornare libero, vel rutrum dolor quam vitae tellus.</p>
+            <p class="card-words">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius, dolor ac facilisis pretium, metus massa ornare libero.</p>
+            <div class="share-icons">
+              <a href=""><span class="material-icons-outlined">bookmark_add</span></a>
+              <a href=""><span class="material-icons-outlined">visibility</span></a>
+              <a href=""><span class="material-icons-outlined">share</span></a>
+            </div>
           </div>
           <div class="card">
             <h2>Hot Project</h2>
-            <p class="card-words">Aliquam non justo tincidunt, maximus ante non, efficitur dolor. Vivamus sollicitudin metus in arcu efficitur, in rutrum magna rhoncus.</p>
+            <p class="card-words">Aliquam non justo tincidunt, maximus ante non, efficitur dolor. Vivamus sollicitudin metus in arcu efficitur.</p>
+            <div class="share-icons">
+              <a href=""><span class="material-icons-outlined">bookmark_add</span></a>
+              <a href=""><span class="material-icons-outlined">visibility</span></a>
+              <a href=""><span class="material-icons-outlined">share</span></a>
+            </div>
           </div>
           <div class="card">
             <h2>Spicy Project</h2>
             <p class="card-words">In consequat lacinia mi, vel rutrum neque aliquet vel. In porta lacinia rutrum. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            <div class="share-icons">
+              <a href=""><span class="material-icons-outlined">bookmark_add</span></a>
+              <a href=""><span class="material-icons-outlined">visibility</span></a>
+              <a href=""><span class="material-icons-outlined">share</span></a>
+            </div>
           </div>
           <div class="card">
             <h2>Sweet Project</h2>
             <p class="card-words">Aliquam commodo ex ac felis faucibus tempor. Mauris urna tellus, eleifend quis augue eu, gravida eleifend lacus. Donec egestas ornare aliquam.</p>
+            <div class="share-icons">
+              <a href=""><span class="material-icons-outlined">bookmark_add</span></a>
+              <a href=""><span class="material-icons-outlined">visibility</span></a>
+              <a href=""><span class="material-icons-outlined">share</span></a>
+            </div>
           </div>
           <div class="card">
             <h2>Scary Project</h2>
             <p class="card-words">Morbi sem metus, eleifend eget dui a, ornare blandit justo. Vestibulum at ipsum velit. Nulla facilisi. </p>
+            <div class="share-icons">
+              <a href=""><span class="material-icons-outlined">bookmark_add</span></a>
+              <a href=""><span class="material-icons-outlined">visibility</span></a>
+              <a href=""><span class="material-icons-outlined">share</span></a>
+            </div>
           </div>
           <div class="card">
             <h2>Happy Project</h2>
             <p class="card-words">Nulla tincidunt venenatis arcu sagittis bibendum. Quisque gravida sit amet erat sed pretium. Quisque a neque eu dolor venenatis vehicula. Aliquam erat volutpat.</p>
+            <div class="share-icons">
+              <a href=""><span class="material-icons-outlined">bookmark_add</span></a>
+              <a href=""><span class="material-icons-outlined">visibility</span></a>
+              <a href=""><span class="material-icons-outlined">share</span></a>
+            </div>
           </div>
         </div>
 
         <div class="right-snip">
           <div class="announce-container">
-            <div class="card-squished">
-              <h2>Site Maintenance</h2>
-              <p class="card-words">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+            <div class="card-squished not-last">
+              <h2 class="side">Site Maintenance</h2>
+              <p class="card-words squished">Pellentesque habitant morbi tristique senectus et netus...</p>
+            </div>
+            <div class="card-squished not-last">
+              <h2 class="side">Community Share Day</h2>
+              <p class="card-words squished">Vestibulum varius orci ac accumsan hendrerit. Curabitur accumsan...</p>
             </div>
             <div class="card-squished">
-              <h2>Community Share Day</h2>
-              <p class="card-words">Vestibulum varius orci ac accumsan hendrerit. Curabitur accumsan porta placerat.</p>
-            </div>
-            <div class="card-squished">
-              <h2>Updated Privacy Policy</h2>
-              <p class="card-words">Fusce malesuada, massa sollicitudin mattis tincidunt, tellus urna lacinia urna, quis sodales ligula tellus non nisi.</p>
+              <h2 class="side">Updated Privacy Policy</h2>
+              <p class="card-words squished">Fusce malesuada, massa sollicitudin mattis tincidunt, tellus urna lacinia...</p>
             </div>
           </div>
 
-          <h1>Trending</h1>
+          <h1 id="trending">Trending</h1>
           
           <div class="trending-container">
-            <div class="card-squished">item1</div>
-            <div class="card-squished">item2</div>
-            <div class="card-squished">item3</div>
-            <div class="card-squished">item4</div>
+            <div class="card-squished">
+              <img src="/admin-dashboard/profile-pics/ball.png" alt="balloon">
+              <div class="trend-words">
+                <h3>@tegan</h3>
+                <p class="app-name">World Peace Builder</p>
+              </div>
+            </div>
+            <div class="card-squished">
+              <img src="/admin-dashboard/profile-pics/peaceful.png" alt="peaceful-face">
+              <div class="trend-words">
+                <h3>@hefe</h3>
+                <p class="app-name">Super Cool Project</p>
+              </div>
+            </div>
+            <div class="card-squished">
+              <img src="/admin-dashboard/profile-pics/pep.png" alt="frog">
+              <div class="trend-words">
+                <h3>@kendall</h3>
+                <p class="app-name">Life Changing App</p>
+              </div>
+            </div>
+            <div class="card-squished">
+              <img src="/admin-dashboard/profile-pics/pig.png" alt="pigs face">
+              <div class="trend-words">
+                <h3>@alex</h3>
+                <p class="app-name">No Traffic Maker</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
